--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@react-spring/web": "^9.7.2",
+    "@react-three/drei": "^9.76.1",
+    "@react-three/fiber": "^8.13.3",
+    "@react-three/postprocessing": "^2.14.11",
+    "dotenv": "^16.3.1",
     "next": "13.4.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-three-fiber": "^6.0.13",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.63.4",
+    "sharp": "^0.32.1",
+    "three": "^0.153.0"
   }
 }
