--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.76.1",
     "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "^2.14.11",
+    "@vercel/analytics": "^1.0.1",
     "dotenv": "^16.3.1",
     "next": "13.4.6",
     "react": "18.2.0",
